Use PIC for MFEM and VTK.

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -19,6 +19,7 @@ RUN cd /tmp && \
     CXX=mpicxx cmake .. \
         -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
         -DMFEM_USE_MPI=ON \
+        -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
         -DMFEM_USE_PETSC=OFF \
         -DBUILD_SHARED_LIBS=OFF \
         -DMFEM_THREAD_SAFE=ON \
