--- a/vtk/Dockerfile
+++ b/vtk/Dockerfile
@@ -15,6 +15,7 @@ RUN cd /tmp && \
     CXX=mpicxx cmake \
     -D CMAKE_BUILD_TYPE:STRING=Release \
     -D CMAKE_INSTALL_PREFIX:STRING=/usr/lib/vtk \
+    -D CMAKE_POSITION_INDEPENDENT_CODE=ON \
     -D BUILD_DOCUMENTATION:BOOL=OFF \
     -D BUILD_EXAMPLES:BOOL=OFF \
     -D BUILD_TESTING:BOOL=OFF \
