--- a/petsc/Dockerfile
+++ b/petsc/Dockerfile
@@ -37,10 +37,9 @@ RUN cd /tmp && \
     --with-ff=mpif77 \
     --with-clanguage=C++ \
     --with-debugging=1 \
-    --with-pic=1 \
     --with-shared-libraries=0 \
     --with-x=0 \
-    COPTFLAGS='-O3' FOPTFLAGS='-O3' && \
+    CFLAGS='-fPIC' CXXXFLAGS='-fPIC' FCFLAGS='-fPIC' COPTFLAGS='-O3' FOPTFLAGS='-O3' && \
     make PETSC_DIR=`pwd` -j $(cat /proc/cpuinfo | grep processor | wc -l) all && \
     make PETSC_DIR=`pwd` install && \
     cd /tmp && rm -rf petsc-$PETSC_VERSION
