Update mfem dockerfile to use intel script

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -1,6 +1,9 @@
 ARG TAG=latest
 FROM ataber/mkl_vtk:$TAG
 
+# Use bash as shell so that the intel mkl var script works
+SHELL ["/bin/bash", "-c"]
+
 # Update apt and install apt dependencies
 RUN apt-get update --fix-missing \
 &&  apt-get upgrade -y --force-yes \
@@ -21,7 +24,8 @@ RUN apt-get update --fix-missing \
 
 # Build and install SuiteSparse solvers needed for mfem
 ENV SuiteSparse_DIR /opt/suitesparse
-RUN export CXXFLAGS="$CXXFLAGS -fPIC" && \
+RUN . /opt/intel/mkl/bin/mklvars.sh intel64 && \
+    export CXXFLAGS="$CXXFLAGS -fPIC" && \
     export CFLAGS="$CFLAGS -fPIC" && \
     cd /tmp && \
     git clone https://github.com/DrTimothyAldenDavis/SuiteSparse && \
@@ -32,7 +36,8 @@ RUN export CXXFLAGS="$CXXFLAGS -fPIC" && \
 
 # Build and install METIS
 ENV METIS_DIR /opt/metis
-RUN export CXXFLAGS="$CXXFLAGS -fPIC" && \
+RUN . /opt/intel/mkl/bin/mklvars.sh intel64 && \
+    export CXXFLAGS="$CXXFLAGS -fPIC" && \
     export CFLAGS="$CFLAGS -fPIC" && \
     cd /tmp && \
     git clone https://github.com/scivision/METIS.git && \
@@ -47,7 +52,8 @@ RUN export CXXFLAGS="$CXXFLAGS -fPIC" && \
 
 # Build and install HYPRE
 ENV HYPRE_DIR /opt/hypre
-run export CXXFLAGS="$CXXFLAGS -fPIC" && \
+RUN . /opt/intel/mkl/bin/mklvars.sh intel64 && \
+    export CXXFLAGS="$CXXFLAGS -fPIC" && \
     export CFLAGS="$CFLAGS -fPIC" && \
     cd /tmp && \
     git clone https://github.com/hypre-space/hypre.git && \
@@ -61,7 +67,8 @@ run export CXXFLAGS="$CXXFLAGS -fPIC" && \
 
 # Build and install MFEM
 ENV MFEM_DIR /opt/mfem
-RUN export CXXFLAGS="$CXXFLAGS -fPIC" && \
+RUN . /opt/intel/mkl/bin/mklvars.sh intel64 && \
+    export CXXFLAGS="$CXXFLAGS -fPIC" && \
     export CFLAGS="$CFLAGS -fPIC" && \
     cd /tmp && \
     git clone https://github.com/mfem/mfem.git && \
@@ -81,4 +88,3 @@ RUN export CXXFLAGS="$CXXFLAGS -fPIC" && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
     rm -rf /tmp/mfem
-
