--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -360,14 +360,14 @@ workflows:
       - mfem:
           requires:
             - petsc
-      - mfem_mkl
+      - mfem_mkl:
           requires:
             - mfem
             - intel_mkl
       - mfem_vdb:
           requires:
             - mfem_mkl
-      - mkl_vtk
+      - mkl_vtk:
           requires:
             - intel_mkl
       - open_foam:
