--- a/mfem_vdb/Dockerfile
+++ b/mfem_vdb/Dockerfile
@@ -1,11 +1,9 @@
 ARG TAG=latest
-FROM ataber/mfem_mkl:${TAG}
+FROM ataber/mfem:${TAG}
 
 RUN apt-get update --fix-missing \
 &&  apt-get upgrade -y --force-yes \
 &&  DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    make \
-    git-all \
     build-essential \
     libboost-iostreams-dev \
     libboost-system-dev \
@@ -21,7 +19,8 @@ RUN cd /tmp && \
     git checkout tags/v1.5.0 -b v1.5.0 && \
     mkdir build && \
     cd build && \
-    cmake .. && \
+    cmake .. \
+        -DBUILD_SHARED_LIBS=ON && \
     make -j4 && \
     make install && \
     cd ../.. && \
@@ -33,7 +32,8 @@ RUN cd /tmp && \
     git checkout tags/v7.2.0 -b v7.2.0 && \
     mkdir build && \
     cd build && \
-    cmake .. && \
+    cmake .. \
+        -DBUILD_SHARED_LIBS=ON && \
     make -j4 && \
     make install && \
     cd ../.. && \
