--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -57,6 +57,8 @@ RUN . /opt/intel/mkl/bin/mklvars.sh intel64 && \
     export CFLAGS="$CFLAGS -fPIC" && \
     cd /tmp && \
     git clone https://github.com/hypre-space/hypre.git && \
+    cd /tmp/hypre && \
+    git checkout v2.20.0
     cd /tmp/hypre/src/cmbuild && \
     CXX=mpicxx \
     cmake .. && \
