--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -19,6 +19,8 @@ RUN apt-get update --fix-missing \
     pkg-config \
     libgmp3-dev \
     libmpfr-dev \
+    libblas-dev \
+    liblapack-dev \
 &&  apt-get clean \
 &&  rm -rf /var/cache/apt/archives/* /var/lib/apt/lists/*
 
